fixed_templates/pgadmin4_checkov_fixed_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pgadmin4
  namespace: test-ns
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.15.2
    app.kubernetes.io/version: '7.0'
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pgadmin4
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pgadmin4
  namespace: test-ns
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.15.2
    app.kubernetes.io/version: '7.0'
    app.kubernetes.io/managed-by: Helm
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin4
      annotations:
        checksum/secret: 59aee739a7f5c89c5555f4fc7799b9b33cb01e37e7046a22f01ddebcafd69467
    spec:
      containers:
      - name: pgadmin4
        image: docker.io/dpage/pgadmin4:7.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            port: http
            path: /misc/ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            port: http
            path: /misc/ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 15
        volumeMounts:
        - name: pgadmin-data
          mountPath: /var/lib/pgadmin
        - name: secret-volume
          readOnly: true
          mountPath: /etc/secret-volume
        resources:
          limits:
            memory: 128Mi
            cpu: 250m
          requests:
            memory: 128Mi
            cpu: 250m
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          runAsUser: 25000
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 25000
      volumes:
      - name: pgadmin-data
        persistentVolumeClaim:
          claimName: release-name-pgadmin4
      - name: secret-volume
        secret:
          secretName: my-secret
      securityContext:
        fsGroup: 5050
        runAsGroup: 5050
        runAsUser: 25000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Pod
metadata:
  name: release-name-pgadmin4-test-connection
  namespace: test-ns
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.15.2
    app.kubernetes.io/version: '7.0'
    app.kubernetes.io/managed-by: Helm
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: hook-succeeded
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  securityContext:
    runAsNonRoot: true
    fsGroup: 5051
    runAsGroup: 5051
    runAsUser: 25000
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: wget
    image: docker.io/busybox:1-uclibc@sha256:3dcd6bcb75d6ca5b23642482809ea3dbba4de07d277326454f443b9dcb14b012
    imagePullPolicy: Always
    command:
    - /bin/sh
    - -ec
    - 'response=$(wget -qSO - http://${PGADMIN_HOST}:${PGADMIN_PORT} 2>&1)

      check=$(echo $response | grep -c ''200 OK''); echo $check; if [[ $check -gt
      0 ]]; then echo "Response OK"; else exit 1; fi

      '
    resources:
      limits:
        memory: 128Mi
        cpu: 250m
      requests:
        memory: 128Mi
        cpu: 250m
    securityContext:
      readOnlyRootFilesystem: true
      capabilities:
        drop:
        - ALL
      allowPrivilegeEscalation: false
      runAsUser: 25000
    livenessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
    readinessProbe:
      exec:
        command:
        - ls
        - /
      initialDelaySeconds: 30
      periodSeconds: 10
  restartPolicy: Never
  automountServiceAccountToken: false
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: test-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.17.0.0/16
        except:
        - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          project: myproject
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
    ports:
    - protocol: TCP
      port: 5978
